# cnpm

./: .clangd  .gitignore  Bao_Cao_Kiem_Thu.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  compile_commands.json  run.bat
.gitnexus/: meta.json
docs/: design.md  schema.sql
src/: main.cpp
src/controllers/: classcontroller.cpp  classcontroller.h  departmentcontroller.cpp  departmentcontroller.h  studentcontroller.cpp  studentcontroller.h
src/database/: databasemanager.cpp  databasemanager.h
src/models/: class_model.cpp  class_model.h  department.cpp  department.h  student.cpp  student.h
src/resources/: resources.qrc
src/views/: classdialog.cpp  classdialog.h  departmentdialog.cpp  departmentdialog.h  logindialog.cpp  logindialog.h  mainwindow.cpp  mainwindow.h  studentdialog.cpp  studentdialog.h
ui/: classdialog.ui  departmentdialog.ui  logindialog.ui  mainwindow.ui  studentdialog.ui
